aggiunti header fix e css su scrollbar

--- a/master.css
+++ b/master.css
@@ -8,6 +8,9 @@ body {
     background-color: #333;
 }
 header {
+    z-index: 4;
+    position: fixed;
+    min-width: 100vw;
     display: flex;
     height: 100px;
     background-color: black;
@@ -18,15 +21,20 @@ header {
 header input {
     width: 300px;
     height: 40px;
+    border-radius: 3px;
+    text-align: center;
 }
 
 header button {
+    border-radius: 3px;
     width: 80px;
     height: 40px;
+    background-color: red;
+    color: white;
 
 }
 .welcome {
-    width: 100%;
+    width: 100vw;
     min-height: calc(100vh - 100px);
     background-image: url('https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fhcdevilsadvocate.com%2Fwp-content%2Fuploads%2F2019%2F01%2Fnetflix-background-9.jpg&f=1&nofb=1');
     background-repeat: no-repeat;
@@ -50,12 +58,23 @@ h1 {
     font-size: 14px;
     cursor: pointer;
 }
+
+section {
+    background-color: #333;
+    z-index: 3;
+    position: fixed;
+    padding-top: 100px;
+    width: 100vw;
+}
 section h2 {
     color: white;
     padding: 20px 100px;
 }
 
  .film-container {
+     background-color: #333;
+     padding-top: 160px;
+
      display: flex;
      flex-wrap: wrap;
      justify-content: center;
@@ -112,9 +131,10 @@ ul {
     width: 342px;
     height: 500px;
     opacity: 0.8;
-    background-color: rgba(0,0,0,0.9);
+    background-color: rgba(0,0,0,0.95);
     position: absolute;
     overflow-y: auto;
+    border: 0.5px solid white;
 }
 .content-info li {
     margin: 5px;
@@ -128,6 +148,25 @@ ul {
     max-height: 250px;
     overflow: auto;
 }
+
+.content-info li::-webkit-scrollbar {
+    width: 6px;
+}
+
+.content-info li::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px grey;
+    border-radius: 10px;
+}
+.content-info li::-webkit-scrollbar-thumb {
+    background-image: linear-gradient(135deg,red,black);
+    border-radius: 10px;
+}
+
+.content-info li::-webkit-scrollbar-thumb:hover {
+    background: red;
+}
+
+
 h2 {
     font-size: 16px;
 }
@@ -147,18 +186,21 @@ h3 {
 .actors, .genres {
     display: inline-block;
     padding: 5px 0;
+    padding-right: 15px;
 }
 
 .loader {
-    margin-top: 10px;
-    border: 5px solid lightgrey;
+    top: calc(50vh - 100px);
+    left: calc(50vw - 100px);
+    z-index: 3;
+    position: fixed;
+    border: 20px solid lightgrey;
     border-radius: 50%;
-    border-top: 5px solid red;
-    width: 30px;
-    height: 30px;
-    animation: spin 1s linear infinite;
+    border-top: 20px solid red;
+    width: 200px;
+    height: 200px;
+    animation: spin 0.7s linear infinite;
 }
-
 
 @keyframes spin {
   0% { transform: rotate(0deg); }
